# MLWeatherSevereWeatherForecast

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-05-07-ml-severe-weather-forecast.md  2026-05-07-nadocast-clone.md
docs/superpowers/specs/: 2026-05-07-ml-severe-weather-forecast-design.md  2026-05-07-nadocast-clone-design.md
src/ml_severe_weather_forecast/: __init__.py  cli.py  config.py  labels.py
src/ml_severe_weather_forecast/data/: __init__.py  grid.py  hrrr.py  reports.py
src/ml_severe_weather_forecast/features/: extract.py
src/nadocast_clone/: __init__.py  cli.py  config.py  logging.py
tests/: test_extract.py  test_grid.py  test_hrrr.py  test_labels.py  test_reports.py  test_smoke.py
tests/fixtures/: build_tiny_hrrr.py  sample_lsr.csv
