[project]
name = "ml-severe-weather-forecast"
version = "0.1.0"
description = "ML severe-weather forecaster (CONUS, XGBoost on HRRR)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "xarray>=2024.5",
    "cfgrib>=0.9.12",
    "eccodes>=2.36",
    "herbie-data>=2024.5",
    "pyproj>=3.6",
    "shapely>=2.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "xgboost>=2.1",
    "matplotlib>=3.8",
    "cartopy>=0.23",
    "joblib>=1.4",
    "tqdm>=4.66",
    "psutil>=5.9",
    "shap>=0.45",
    "geopandas>=1.0",
    "fiona>=1.10",
]

[project.scripts]
mlswf = "ml_severe_weather_forecast.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "nbstripout>=0.7",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_severe_weather_forecast"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ml_severe_weather_forecast"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/ml_severe_weather_forecast"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
